--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 </head>
 <body>
 
+<!-- Flipping Navigation Bar -->
 <nav>
-  <a href="/index.html">HELICOPTER</a>
-  <a href="/supercar.html">HELICOPTER</a>
-  <a href="/avenger.html">HELICOPTER</a>
+  <div class="flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">Menu</div>
+      <div class="flip-card-back">
+        <a href="/index.html">Home</a>
+        <a href="/avenger.html">Enter Name</a>
+        <a href="/supercar.html">Different Model</a>
+      </div>
+    </div>
+  </div>
 </nav>
 
   <!-- Scrolling Background Text -->
