--- a/index.html
+++ b/index.html
@@ -14,15 +14,32 @@
 <nav>
   <div class="flip-card">
     <div class="flip-card-inner">
-      <div class="flip-card-front">Menu</div>
+      <div class="flip-card-front">Menu 1</div>
       <div class="flip-card-back">
         <a href="/index.html">Home</a>
-        <a href="/avenger.html">Enter Name</a>
-        <a href="/supercar.html">Different Model</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">Menu 2</div>
+      <div class="flip-card-back">
+        <a href="/enter-name.html">Enter Name</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">Menu 3</div>
+      <div class="flip-card-back">
+        <a href="/new-model.html">Different Model</a>
       </div>
     </div>
   </div>
 </nav>
+
 
   <!-- Scrolling Background Text -->
   <div class="scrolling-text">
