--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <!-- 3D Model -->
   <model-viewer 
-    src="your-model.glb" 
+    src="model/avengers_assemble_scene.glb" 
     alt="3D Model" 
     auto-rotate 
     camera-controls 
