--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     src="model/avengers_assemble_scene.glb" 
     alt="3D Model" 
     auto-rotate 
+    autoplay 
     camera-controls 
     ar 
     background-color="transparent" 
