--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
   <!-- 3D Model -->
   <model-viewer 
     src="model/avengers_assemble_scene.glb" 
-    alt="3D Model" 
+    alt="3D Model"
     auto-rotate 
     autoplay 
     camera-controls 
     ar 
-    background-color="transparent" 
+    background-color="transparent"
     exposure="1.2"
-    style="display: block; margin: auto;">
+    style="width: 90vw; height: auto; display: block; margin: 
   </model-viewer>
 
   <script>
