--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <!-- 3D Model -->
   <model-viewer 
-    src="your-model.glb"
+    src="model/stylized_ww1_plane.glb"
     alt="3D Model"
     auto-rotate 
     autoplay 
